Add configurable container IP and use 10.32.33.2 as default
- Add WG_CONTAINER_IP environment variable for flexible container IP configuration
- Change default container IP to 10.32.33.2 (avoid common conflicts with .1)
- Keep VPN network at 10.32.33.0/24
- Update documentation in .env.example

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,12 @@
 # Default: 51820
 #WG_PORT=51820
 
+# Docker container IP address within the wg network
+# Must be within the subnet defined in docker-compose.yml
+# Change this if the default .2 is already in use on your system
+# Default: 10.32.33.2
+#WG_CONTAINER_IP=10.32.33.100
+
 # Disable IPv6 support (removes ip6tables rules)
 # Default: false
 #DISABLE_IPV6=false
