--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     networks:
       wg:
         ipv4_address: ${WG_CONTAINER_IP:-10.32.33.2}
+        ipv6_address: ${WG_CONTAINER_IPV6:-2001:0DB8::2}
     volumes:
       - etc_wireguard:/etc/wireguard
       - /lib/modules:/lib/modules:ro
@@ -28,7 +29,9 @@ services:
 networks:
   wg:
     driver: bridge
+    enable_ipv6: true
     ipam:
       driver: default
       config:
         - subnet: 10.32.33.0/24
+        - subnet: 2001:0DB8::/32
